RESOLVED FIXED149840
[CSS Grid Layout] Modify grid item height doesn't work
https://bugs.webkit.org/show_bug.cgi?id=149840
Summary [CSS Grid Layout] Modify grid item height doesn't work
Javier Fernandez
Reported 2015-10-06 06:26:15 PDT
Created attachment 262512 [details] test case In the attached example if you click the "Test" button, the grid item's height is set to 100px, however the item is not modified at all. You can test it live at: http://jsbin.com/vokuru/edit?html,output
Attachments
test case (510 bytes, text/html)
2015-10-06 06:26 PDT, Javier Fernandez
no flags
Patch (9.77 KB, patch)
2015-10-06 06:44 PDT, Javier Fernandez
no flags
Patch (9.73 KB, patch)
2015-10-07 05:05 PDT, Javier Fernandez
no flags
Patch (9.73 KB, patch)
2015-10-07 05:19 PDT, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2015-10-06 06:44:50 PDT
Sergio Villar Senin
Comment 2 2015-10-07 01:38:19 PDT
Comment on attachment 262513 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=262513&action=review > Source/WebCore/ChangeLog:1 > +2015-10-06 Javier Fernandez <jfernandez@igalia.com> Looks like there is a missing empty line here. > Source/WebCore/ChangeLog:20 > + No new tests, but added some additional cases. I'd remove this, additional test cases are new tests.
Javier Fernandez
Comment 3 2015-10-07 05:05:03 PDT
Sergio Villar Senin
Comment 4 2015-10-07 05:12:52 PDT
BTW the bug title has a typo: Gird -> Grid, correct it and the ChangeLogs
Javier Fernandez
Comment 5 2015-10-07 05:19:59 PDT
WebKit Commit Bot
Comment 6 2015-10-07 06:14:43 PDT
Comment on attachment 262596 [details] Patch Clearing flags on attachment: 262596 Committed r190665: <http://trac.webkit.org/changeset/190665>
WebKit Commit Bot
Comment 7 2015-10-07 06:14:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.